cloud-infra-macros/tests/fails/timeout_boundary_high.rs
use cloud_infra_macros::timeout;

fn example() {
    let t = timeout!(901);
}

fn main() {}