cloud-infra-macros/tests/fails/timeout_boundary_high.stderr
error: proc macro panicked
 --> tests/fails/timeout_boundary_high.rs:4:13
  |
4 |     let t = timeout!(901);
  |             ^^^^^^^^^^^^^
  |
  = help: message: value should be at most 900
